--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "body-parser": "^1.20.0",
     "bootstrap": "3.3.7",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "fullcalendar": "3.10.2",
     "jquery": "3.2.1",
     "mobx": "3.2.1",
     "mobx-react": "4.2.2",
@@ -32,6 +35,7 @@
     "typescript": "^3.4.1"
   },
   "devDependencies": {
+    "@types/fullcalendar": "2.7.44",
     "@types/jquery": "2.0.46",
     "@types/moment": "2.13.0",
     "@types/node": "^12.12.5",
